testing with cypress

--- a/.env.local.example
+++ b/.env.local.example
@@ -1,2 +1,7 @@
-NEXT_PUBLIC_API_BASE_URL="http://localhost:3000/api"NEXT_PUBLIC_API_BASE_URL="http://localhost:3000"
+# NEXT_PUBLIC_API_BASE_URL="http://localhost:3000"
+# APP_URL="http://localhost:3000"
+
+NEXT_PUBLIC_API_BASE_URL="https://ignite-devstore-api-hiui.vercel.app"
 APP_URL="http://localhost:3000"
+
+# https://ignite-devstore-api-hiui.vercel.app/api/products
