--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,10 @@
 {
-  "extends": ["next/core-web-vitals", "next/typescript", "@rocketseat/eslint-config/next"]
+  "extends": [
+    "next/core-web-vitals",
+    "next/typescript",
+    "@rocketseat/eslint-config/next"
+  ],
+  "rules": {
+    "@typescript-eslint/no-namespace": "off"
+  }
 }
